# file-upload

./: .json  Cargo.toml  index.html
src/: lib.rs  main.rs
src/routes/: index.rs  mod.rs  upload.rs
