[package]
name = "file-upload"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
bytes = { version = "1.7.1", features = ["serde"] }
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.7", features = ["full"] }
multer = { version = "3.1.0", features = ["serde", "serde_json", "tokio"] }
serde = { version = "1.0.209", features = ["serde_derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
